# multigrid

./: CMakeLists.txt  README.md
bashscripts/: script.sh
include/: initializeProblem.h  linearalgebra.h  multigrid.h
libraries/: README
python_src/: plotResults.py  plotTimings.py  plotTimingsVariable.py  resultParser.py
python_src/bash_outputs/: timings_strongScaling_dynamicProcs_1e4ratio_3runs.txt  timings_strongScaling_dynamicProcs_3runs.txt  timings_strongScaling_staticProcs_3runs.txt  timings_strongScaling_staticProcs_7runs.txt  weakscaling.txt
python_src/bash_outputs/VariableTimings/: ndof129  ndof257  ndof513  ndof65
src/: initializeProblem.cpp  linearalgebra.cpp  main.cpp  multigrid.cpp
